// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFilterButton does not render a badge or count if numFilters is not passed 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiFilterButton testClass1 testClass2 css-15qfgye-empty-text"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiFilterButton testClass1 testClass2 css-15qfgye-empty-text"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props grow can be turned off 1`] = `
<button
  class="euiButtonEmpty euiFilterButton euiFilterButton--noGrow css-15qfgye-empty-text"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props iconType and iconSide is rendered 1`] = `
<button
  class="euiButtonEmpty euiFilterButton euiFilterButton--hasIcon css-15qfgye-empty-text"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props isDisabled is rendered 1`] = `
<button
  class="euiButtonEmpty euiFilterButton css-13li5q5-empty-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props isSelected is rendered 1`] = `
<button
  class="euiButtonEmpty euiFilterButton euiFilterButton-isSelected css-15qfgye-empty-text"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props numActiveFilters and hasActiveFilters is rendered 1`] = `
<button
  class="euiButtonEmpty euiFilterButton euiFilterButton-hasActiveFilters css-15qfgye-empty-text"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
    >
      <span
        class="euiFilterButton__textShift"
      />
      <span
        aria-label="5 active filters"
        class="euiNotificationBadge euiFilterButton__notification"
      >
        5
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props numFilters is rendered 1`] = `
<button
  class="euiButtonEmpty euiFilterButton euiFilterButton-hasNotification css-15qfgye-empty-text"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
    >
      <span
        class="euiFilterButton__textShift"
      />
      <span
        aria-label="5 available filters"
        class="euiNotificationBadge euiNotificationBadge--subdued euiFilterButton__notification"
      >
        5
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props type is rendered 1`] = `
<button
  class="euiButtonEmpty euiFilterButton css-15qfgye-empty-text"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props withNext is rendered 1`] = `
<button
  class="euiButtonEmpty euiFilterButton euiFilterButton--withNext css-15qfgye-empty-text"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton renders zero properly 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiFilterButton euiFilterButton-hasNotification testClass1 testClass2 css-15qfgye-empty-text"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
    >
      <span
        class="euiFilterButton__textShift"
      />
      <span
        aria-label="0 available filters"
        class="euiNotificationBadge euiNotificationBadge--subdued euiFilterButton__notification"
      >
        0
      </span>
    </span>
  </span>
</button>
`;
